# F20DP-CWK1-Haskell

./: .gitignore  README.md  benchmark.sh  haskell-totient.cabal  stack.yaml
app/: Main.hs
bench/: ParallelBenchmarks.hs
src/: TotientRange.hs
